# sjsch.github.io

./: .gitignore  CNAME  flake.nix  index.html  sjsch-site.cabal
app/: Main.hs
pages/: index.html
posts/: 2021-05-09-interactive-cek.html  2021-05-09-interactive-cek.md
scripts/: cek.js
styles/: cek.css  cek.scss  colours.scss  global.css  global.scss
templates/: default.html
